Add gloss-file xattr isolation workflows

--- a/.github/workflows/139-168-ubuntu-xtrace-gloss-file-late-xtrace.yml
+++ b/.github/workflows/139-168-ubuntu-xtrace-gloss-file-late-xtrace.yml
@@ -1,7 +1,7 @@
-name: 139-161 Ubuntu xtrace xattr unset function
+name: 139-168 Ubuntu xtrace gloss file late xtrace
 
 on:
-  workflow_dispatch:
+  pull_request:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,12 +11,11 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-xtrace-xattr-unset-function:
-    name: 139-161 Ubuntu xtrace xattr unset function
+  ubuntu-xtrace-gloss-file-late-xtrace:
+    name: 139-168 Ubuntu xtrace gloss file late xtrace
     runs-on: ubuntu-latest
     env:
       WIZARDRY_OS_LABEL: ubuntu
-      WIZARDRY_GLOSSES: "1"
       WIZARDRY_DEBUG: "1"
     steps:
       - name: Checkout
@@ -34,50 +33,46 @@ jobs:
             echo 'kernel.apparmor_restrict_unprivileged_userns=0'
           } | sudo tee /etc/sysctl.d/99-unprivileged-userns.conf
           sudo sysctl --system
-      - name: Run invoke-wizardry then unset xattr function under xtrace
+      - name: Generate gloss file, then enable xtrace for xattr
         run: |
           set +e
           ulimit -c unlimited || true
           if command -v timeout >/dev/null 2>&1; then
             timeout 120 bash -lc '
-              . spells/.imps/sys/invoke-wizardry
+              set -e
+              export WIZARDRY_DIR="$GITHUB_WORKSPACE"
+              gloss_file=$(mktemp /tmp/wizardry-gloss.XXXXXX)
+              "$WIZARDRY_DIR/spells/.wizardry/generate-glosses" --output "$gloss_file"
+              . "$gloss_file"
               set -x
-              type xattr || true
-              if command -v xattr >/dev/null 2>&1; then
-                if type xattr 2>/dev/null | grep -q "function"; then
-                  unset -f xattr
-                fi
-              fi
               tmp=$(mktemp "${TMPDIR:-/tmp}/wizardry-xattr.XXXXXX")
-              command xattr -w user.test value "$tmp"
-              command xattr -p user.test "$tmp"
-              command xattr -d user.test "$tmp" || :
+              xattr -w user.test value "$tmp"
+              xattr -p user.test "$tmp"
+              xattr -d user.test "$tmp" || :
               rm -f "$tmp"
             '
             status=$?
           else
             bash -lc '
-              . spells/.imps/sys/invoke-wizardry
+              set -e
+              export WIZARDRY_DIR="$GITHUB_WORKSPACE"
+              gloss_file=$(mktemp /tmp/wizardry-gloss.XXXXXX)
+              "$WIZARDRY_DIR/spells/.wizardry/generate-glosses" --output "$gloss_file"
+              . "$gloss_file"
               set -x
-              type xattr || true
-              if command -v xattr >/dev/null 2>&1; then
-                if type xattr 2>/dev/null | grep -q "function"; then
-                  unset -f xattr
-                fi
-              fi
               tmp=$(mktemp "${TMPDIR:-/tmp}/wizardry-xattr.XXXXXX")
-              command xattr -w user.test value "$tmp"
-              command xattr -p user.test "$tmp"
-              command xattr -d user.test "$tmp" || :
+              xattr -w user.test value "$tmp"
+              xattr -p user.test "$tmp"
+              xattr -d user.test "$tmp" || :
               rm -f "$tmp"
             '
             status=$?
           fi
           if [ "$status" -eq 139 ]; then
-            printf '%s\n' "xtrace xattr unset function exited with code 139 (SIGSEGV)"
+            printf '%s\n' "xtrace gloss file late xtrace exited with code 139 (SIGSEGV)"
             printf '%s\n' "Last 50 dmesg lines (if available):"
             dmesg | tail -n 50 || true
           elif [ "$status" -eq 124 ]; then
-            printf '%s\n' "xtrace xattr unset function timed out after 120 seconds"
+            printf '%s\n' "xtrace gloss file late xtrace timed out after 120 seconds"
           fi
           exit "$status"
