--- a/.github/workflows/139-162-ubuntu-xtrace-xattr-blacklist-gloss.yml
+++ b/.github/workflows/139-162-ubuntu-xtrace-xattr-blacklist-gloss.yml
@@ -1,7 +1,7 @@
 name: 139-162 Ubuntu xtrace xattr blacklist gloss
 
 on:
-  pull_request:
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
