--- a/.github/workflows/139-163-ubuntu-xtrace-xattr-subshell-clean.yml
+++ b/.github/workflows/139-163-ubuntu-xtrace-xattr-subshell-clean.yml
@@ -1,7 +1,7 @@
 name: 139-163 Ubuntu xtrace xattr subshell clean
 
 on:
-  pull_request:
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
