--- a/.github/workflows/139-164-ubuntu-xtrace-xattr-gloss-function-only.yml
+++ b/.github/workflows/139-164-ubuntu-xtrace-xattr-gloss-function-only.yml
@@ -1,7 +1,7 @@
 name: 139-164 Ubuntu xtrace xattr gloss function only
 
 on:
-  pull_request:
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
