--- a/.github/workflows/139-165-ubuntu-xtrace-gloss-file-only.yml
+++ b/.github/workflows/139-165-ubuntu-xtrace-gloss-file-only.yml
@@ -1,7 +1,7 @@
 name: 139-165 Ubuntu xtrace gloss file only
 
 on:
-  pull_request:
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
