--- a/.github/workflows/139-168-ubuntu-xtrace-gloss-file-late-xtrace.yml
+++ b/.github/workflows/139-168-ubuntu-xtrace-gloss-file-late-xtrace.yml
@@ -1,7 +1,7 @@
 name: 139-168 Ubuntu xtrace gloss file late xtrace
 
 on:
-  pull_request:
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
