--- a/.github/workflows/139-173-ubuntu-xtrace-gloss-rename-function.yml
+++ b/.github/workflows/139-173-ubuntu-xtrace-gloss-rename-function.yml
@@ -1,9 +1,7 @@
 name: 139-173 Ubuntu xtrace gloss rename function
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
