--- a/.github/workflows/139-177-ubuntu-xtrace-gloss-declare.yml
+++ b/.github/workflows/139-177-ubuntu-xtrace-gloss-declare.yml
@@ -1,9 +1,7 @@
 name: 139-177 Ubuntu xtrace gloss declare
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
