--- a/.github/workflows/139-179-ubuntu-parse-declare.yml
+++ b/.github/workflows/139-179-ubuntu-parse-declare.yml
@@ -1,9 +1,7 @@
 name: 139-179 Ubuntu parse declare
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
