--- a/.github/workflows/139-180-ubuntu-parse-enable.yml
+++ b/.github/workflows/139-180-ubuntu-parse-enable.yml
@@ -1,9 +1,7 @@
 name: 139-180 Ubuntu parse enable
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
