--- a/.github/workflows/139-182-ubuntu-gloss-banish-help.yml
+++ b/.github/workflows/139-182-ubuntu-gloss-banish-help.yml
@@ -1,7 +1,9 @@
-name: 139-178 Ubuntu xtrace gloss enable
+name: 139-182 Ubuntu gloss banish help
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,13 +13,13 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-xtrace-gloss-enable:
-    name: 139-178 Ubuntu xtrace gloss enable
+  ubuntu-gloss-banish-help:
+    name: 139-182 Ubuntu gloss banish help
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Load glosses and call enable under xtrace
+      - name: Call banish gloss under xtrace
         run: |
           set +e
           ulimit -c unlimited || true
@@ -27,12 +29,12 @@ jobs:
             gloss_file=$(mktemp /tmp/wizardry-gloss.XXXXXX)
             "$WIZARDRY_DIR/spells/.wizardry/generate-glosses" --output "$gloss_file"
             . "$gloss_file"
-            if ! type enable 2>/dev/null | grep -q "function"; then
-              printf '%s\n' "enable gloss function not found" >&2
+            if ! type banish 2>/dev/null | grep -q "function"; then
+              printf '%s\n' "banish gloss function not found" >&2
               exit 1
             fi
             set -x
-            enable
+            banish --help
           )
           status=$?
           if [ "$status" -eq 139 ]; then
