--- a/.github/workflows/139-184-ubuntu-parse-printf.yml
+++ b/.github/workflows/139-184-ubuntu-parse-printf.yml
@@ -1,7 +1,7 @@
 name: 139-184 Ubuntu parse printf
 
 on:
-  pull_request:
+  pull_request_target:
     branches:
       - main
 
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
       - name: Call parse printf under xtrace
         run: |
           set +e
