--- a/.github/workflows/139-183-ubuntu-command-banish-help.yml
+++ b/.github/workflows/139-183-ubuntu-command-banish-help.yml
@@ -1,9 +1,7 @@
 name: 139-183 Ubuntu command banish help
 
 on:
-  pull_request_target:
-    branches:
-      - main
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -19,8 +17,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
       - name: Call command banish after loading glosses
         run: |
           set +e
