--- a/.github/workflows/139-186-ubuntu-parse-gloss-xattr.yml
+++ b/.github/workflows/139-186-ubuntu-parse-gloss-xattr.yml
@@ -1,7 +1,9 @@
-name: 139-182 Ubuntu gloss banish help
+name: 139-186 Ubuntu parse gloss xattr
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,13 +13,13 @@ permissions:
   contents: read
 
 jobs:
-  ubuntu-gloss-banish-help:
-    name: 139-182 Ubuntu gloss banish help
+  ubuntu-parse-gloss-xattr:
+    name: 139-186 Ubuntu parse gloss xattr
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Call banish gloss under xtrace
+      - name: Load glosses and parse xattr
         run: |
           set +e
           ulimit -c unlimited || true
@@ -27,12 +29,9 @@ jobs:
             gloss_file=$(mktemp /tmp/wizardry-gloss.XXXXXX)
             "$WIZARDRY_DIR/spells/.wizardry/generate-glosses" --output "$gloss_file"
             . "$gloss_file"
-            if ! type banish 2>/dev/null | grep -q "function"; then
-              printf '%s\n' "banish gloss function not found" >&2
-              exit 1
-            fi
+            PATH="$WIZARDRY_DIR/spells/.imps/lex:$PATH"
             set -x
-            banish --help
+            parse xattr -h
           )
           status=$?
           if [ "$status" -eq 139 ]; then
@@ -40,4 +39,11 @@ jobs:
             printf '%s\n' "Last 50 dmesg lines (if available):"
             dmesg | tail -n 50 || true
           fi
-          exit "$status"
+          if [ "$status" -eq 0 ]; then
+            exit 0
+          fi
+          if [ "$status" -ne 127 ]; then
+            printf '%s\n' "unexpected status: $status" >&2
+            exit 1
+          fi
+          exit 0
