--- a/.github/workflows/collect-failures.yml
+++ b/.github/workflows/collect-failures.yml
@@ -69,10 +69,10 @@ jobs:
 
           # Workflows to monitor
           workflows=(
-            "139-181 Ubuntu parse banish help"
-            "139-182 Ubuntu gloss banish help"
-            "139-183 Ubuntu command banish help"
-            "139-184 Ubuntu parse printf"
+            "139-185 Ubuntu parse function fallback"
+            "139-186 Ubuntu parse gloss xattr"
+            "139-187 Ubuntu parse banish help"
+            "139-188 Ubuntu gloss banish help"
           )
           
           # Total number of workflows we're monitoring
