--- a/.github/workflows/collect-failures.yml
+++ b/.github/workflows/collect-failures.yml
@@ -69,7 +69,7 @@ jobs:
 
           # Workflows to monitor
           workflows=(
-            "139-198 Ubuntu detect gloss variants"
+            "139-201 Ubuntu gloss block bisect"
           )
           
           # Total number of workflows we're monitoring
