--- a/.github/workflows/139-201-ubuntu-gloss-block-bisect.yml
+++ b/.github/workflows/139-201-ubuntu-gloss-block-bisect.yml
@@ -1,7 +1,7 @@
 name: 139-201 Ubuntu gloss block bisect
 
 on:
-  pull_request:
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
