--- a/.github/workflows/collect-failures.yml
+++ b/.github/workflows/collect-failures.yml
@@ -69,7 +69,7 @@ jobs:
 
           # Workflows to monitor
           workflows=(
-            "139-361 Ubuntu gloss single blocks 207-246"
+            "139-362 Ubuntu gloss block buckets 1-206"
           )
           
           # Total number of workflows we're monitoring
